--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -588,8 +588,7 @@ input[readonly] {
 }
 
 /* Only apply hover on admin homepage */
-.admin-homepage
-.user-homepage .menu-section {
+.frame-section {
     background-color: white;
     border-radius: 8px;
     padding: 20px;
@@ -599,8 +598,7 @@ input[readonly] {
     transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
 }
 
-.admin-homepage
-.user-homepage .menu-section:hover {
+.frame-section:hover {
     transform: scale(1.05);
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     background-color: #f0f8ff;
