--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -56,7 +56,7 @@
     {% endif %}
 
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
-        <div class="menu-section">
+        <div class="frame-section">
             <a href="{{ url_for('user_ownTimetable')}}" style="text-decoration: none;"><h2>Own Timetable</h2></a>
             <li class="submenu">
                 <strong>Purpose:</strong>
@@ -67,7 +67,7 @@
             </li>
         </div>
 
-        <div class="menu-section">
+        <div class="frame-section">
             <a href="{{ url_for('user_invigilationTimetable')}}" style="text-decoration: none;"><h2>Invigilation Timetable</h2></a>
             <li class="submenu">
                 <strong>Purpose:</strong>
@@ -78,7 +78,7 @@
             </li>
         </div>
 
-        <div class="menu-section">
+        <div class="frame-section">
             <a href="{{ url_for('user_invigilationReport')}}" style="text-decoration: none;"><h2>Invigilation Report</h2></a>
             <li class="submenu">
                 <strong>Functionality:</strong>
@@ -93,7 +93,7 @@
 
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         {% if user_level in [2, 3, 4] %}
-            <div class="menu-section">
+            <div class="frame-section">
                 <a href="{{ url_for('user_mergeTimetable')}}" style="text-decoration: none;"><h2>Merge Timetable</h2></a>
                 <li class="submenu">
                     <strong>Purpose:</strong>
