--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -588,7 +588,8 @@ input[readonly] {
 }
 
 /* Only apply hover on admin homepage */
-.frame-section {
+.admin-homepage
+.user-homepage .menu-section {
     background-color: white;
     border-radius: 8px;
     padding: 20px;
@@ -598,34 +599,13 @@ input[readonly] {
     transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
 }
 
-.frame-section:hover {
+.admin-homepage
+.user-homepage .menu-section:hover {
     transform: scale(1.05);
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     background-color: #f0f8ff;
     cursor: pointer;
 }
-
-
-
-/* Hover effect for menu sections */
-.menu-section {
-    background-color: white;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    border: 1px solid #ddd;
-    box-sizing: border-box;
-    transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
-}
-
-/* When hovered */
-.menu-section:hover {
-    transform: scale(1.05); /* Slightly bigger */
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3); /* Stronger shadow */
-    background-color: #f0f8ff; /* Slightly different background */
-    cursor: pointer; /* Shows clickable pointer */
-}
-
 
 
 /* Title with the layout of each frame */
