--- a/app/templates/admin/adminHomepage.html
+++ b/app/templates/admin/adminHomepage.html
@@ -1,4 +1,5 @@
 {% extends "admin/adminBase.html" %}
+{% set body_class = 'admin-homepage' %}
 {% block title %}Admin Homepage{% endblock %}
 {% block content %}
 <div class="menu-grid">
