--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -576,19 +576,8 @@ input[readonly] {
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
-/* Main menu container layout (small frame that divide in the big frame) */
+/* Default style (used on all pages) */
 .menu-section {
-    background-color: white;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    /* Extra */
-    border: 1px solid #ddd;
-    box-sizing: border-box;
-}
-
-/* Only apply hover on admin homepage */
-.frame-section {
     background-color: white;
     border-radius: 8px;
     padding: 20px;
@@ -598,12 +587,15 @@ input[readonly] {
     transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
 }
 
-.frame-section:hover {
+/* Special hover effect only for admin homepage */
+.admin-homepage 
+.user-homepage .menu-section:hover {
     transform: scale(1.05);
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     background-color: #f0f8ff;
     cursor: pointer;
 }
+
 
 
 /* Title with the layout of each frame */
