--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -1,5 +1,6 @@
 <!-- upload.html -->
 {% extends "user/userBase.html" %}
+{% set body_class = 'user-homepage' %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
     <h1>Welcome Back - {{ user_name }}</h1>
@@ -55,7 +56,7 @@
     </form><br>
     {% endif %}
 
-    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
+    <div class="menu-grid">
         <div class="frame-section">
             <a href="{{ url_for('user_ownTimetable')}}" style="text-decoration: none;"><h2>Own Timetable</h2></a>
             <li class="submenu">
