--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -1,5 +1,6 @@
 <!-- upload.html -->
 {% extends "user/userBase.html" %}
+{% set body_class = 'user-homepage' %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
     <h1>Welcome Back - {{ user_name }}</h1>
@@ -55,8 +56,8 @@
     </form><br>
     {% endif %}
 
-    <div class="menu-grid">
-        <div class="frame-section">
+    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
+        <div class="menu-section">
             <a href="{{ url_for('user_ownTimetable')}}" style="text-decoration: none;"><h2>Own Timetable</h2></a>
             <li class="submenu">
                 <strong>Purpose:</strong>
@@ -67,7 +68,7 @@
             </li>
         </div>
 
-        <div class="frame-section">
+        <div class="menu-section">
             <a href="{{ url_for('user_invigilationTimetable')}}" style="text-decoration: none;"><h2>Invigilation Timetable</h2></a>
             <li class="submenu">
                 <strong>Purpose:</strong>
@@ -78,7 +79,7 @@
             </li>
         </div>
 
-        <div class="frame-section">
+        <div class="menu-section">
             <a href="{{ url_for('user_invigilationReport')}}" style="text-decoration: none;"><h2>Invigilation Report</h2></a>
             <li class="submenu">
                 <strong>Functionality:</strong>
@@ -93,7 +94,7 @@
 
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         {% if user_level in [2, 3, 4] %}
-            <div class="frame-section">
+            <div class="menu-section">
                 <a href="{{ url_for('user_mergeTimetable')}}" style="text-decoration: none;"><h2>Merge Timetable</h2></a>
                 <li class="submenu">
                     <strong>Purpose:</strong>
@@ -103,6 +104,7 @@
                     </ul>
                 </li>
             </div>
+
         {% endif %}
     </div>  
 {% endblock %}
