--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -588,13 +588,14 @@ input[readonly] {
     transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
 }
 
-.admin-homepage 
+.admin-homepage .menu-section:hover,
 .user-homepage .menu-section:hover {
     transform: scale(1.05);
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     background-color: #f0f8ff;
     cursor: pointer;
 }
+
 
 /* Title with the layout of each frame */
 .menu-section h2 {
