--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -147,7 +147,7 @@
                         {{ lecturer }}
                     </option>
                 {% endfor %}
-            </select>
+            </select><br>
 
             <label for="department">Select_Department:</label>
             <select name="department" id="department" onchange="this.form.submit()">
