--- a/app/templates/admin/adminHomepage.html
+++ b/app/templates/admin/adminHomepage.html
@@ -9,9 +9,9 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>Manually add new courses</li>
-                    <li>Upload course data in bulk</li>
-                    <li>Edit existing course information</li>
+                    <li>- Manually add new courses</li>
+                    <li>- Upload course data in bulk</li>
+                    <li>- Edit existing course information</li>
                 </ul>
             </ul>
         </div>
@@ -22,9 +22,9 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>Manually add new lecturer data</li>
-                    <li>Upload lecturer data in bulk</li>
-                    <li>Edit existing lecturer information</li>
+                    <li>- Manually add new lecturer data</li>
+                    <li>- Upload lecturer data in bulk</li>
+                    <li>- Edit existing lecturer information</li>
                 </ul>
             </ul>
         </div>
@@ -35,8 +35,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>Manually add new departments</li>
-                    <li>Edit existing department details</li>
+                    <li>- Manually add new departments</li>
+                    <li>- Edit existing department details</li>
                 </ul>
             </ul>
         </div>
@@ -50,8 +50,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>
-                    <li>Upload new exams</li>
-                    <li>Edit existing exam information</li>
+                    <li>- Upload new exams</li>
+                    <li>- Edit existing exam information</li>
                 </ul>
             </ul>
         </div>
@@ -62,8 +62,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>Manually add new venues</li>
-                    <li>Edit existing venue information</li>
+                    <li>- Manually add new venues</li>
+                    <li>- Edit existing venue information</li>
                 </ul>
             </ul>
         </div>
@@ -74,8 +74,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>Upload timetable PDFs (multiple files allowed)</li>
-                    <li>Automatically link timetables to existing lecturer names</li>
+                    <li>- Upload timetable PDFs (multiple files allowed)</li>
+                    <li>- Automatically link timetables to existing lecturer names</li>
                 </ul>
             </ul>
         </div>
@@ -89,8 +89,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>
-                    <li>View invigilation exam slots in a calendar view</li>
-                    <li>Different colors indicate exam types: overnight, past, upcoming</li>
+                    <li>- View invigilation exam slots in a calendar view</li>
+                    <li>- Different colors indicate exam types: overnight, past, upcoming</li>
                 </ul>
             </ul>
         </div>
@@ -101,10 +101,10 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>View all invigilator attendance records</li>
-                    <li>Check details for each exam session</li>
+                    <li>- View all invigilator attendance records</li>
+                    <li>- Check details for each exam session</li>
                 </ul>
-            </ul>
+            </ul>   
         </div>
     </a>
     <a href="{{ url_for('admin_profile')}}" style="text-decoration: none;">
@@ -113,7 +113,7 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>View and update your profile information</li>
+                    <li>- View and update your profile information</li>
                 </ul>
             </ul>
         </div>
