--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -10,8 +10,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>View personal timetable</li>
-                    <li>Check scheduled classes and times</li>
+                    <li>- View personal timetable</li>
+                    <li>- Check scheduled classes and times</li>
                 </ul>
             </ul>
         </div>
@@ -23,8 +23,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>View invigilation timetable</li>
-                    <li>Check scheduled duties by date and time</li>
+                    <li>- View invigilation timetable</li>
+                    <li>- Check scheduled duties by date and time</li>
                 </ul>
             </ul>
         </div>
@@ -36,9 +36,8 @@
             <ul class="submenu">
                 <strong>Functionality:</strong>
                 <ul>
-                    <li>View invigilation attendance records</li>
-                    <li>Check check-in and check-out times</li>
-                    <li>Review attendance status for each session</li>
+                    <li>- View invigilation attendance records</li>
+                    <li>- Check check-in and check-out times</li>
                 </ul>
             </ul>
         </div>
@@ -53,8 +52,8 @@
             <ul class="submenu">
                 <strong>Purpose:</strong>
                 <ul>    
-                    <li>View all merged department timetables</li>
-                    <li>Access combined schedules across lecturers and classes</li>
+                    <li>- View all merged department timetables</li>
+                    <li>- Access combined schedules across lecturers and classes</li>
                 </ul>
             </ul>
         </div>
